[package]
name = "qwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true       # Enable link time optimizations
panic = 'abort'  # Avoids embedding panic handling (reduce size)
codegen-units = 1  # May improve optimizations but can slow down compilation
